--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "PHUP_Zaproszenie": {
+    "TEST_Dashboard ": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -39,7 +39,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/phup-zaproszenie",
+            "outputPath": "dist/test-dashboard ",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -91,10 +91,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "PHUP_Zaproszenie:build:production"
+              "browserTarget": "TEST_Dashboard :build:production"
             },
             "development": {
-              "browserTarget": "PHUP_Zaproszenie:build:development"
+              "browserTarget": "TEST_Dashboard :build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -102,7 +102,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "PHUP_Zaproszenie:build"
+            "browserTarget": "TEST_Dashboard :build"
           }
         },
         "test": {
@@ -127,5 +127,5 @@
       }
     }
   },
-  "defaultProject": "PHUP_Zaproszenie"
+  "defaultProject": "TEST_Dashboard "
 }
